--- a/src/helper/_helper.scss
+++ b/src/helper/_helper.scss
@@ -8,6 +8,7 @@
 
 @mixin helper() {
   @include align-items.align-items();
+  @include align-items.align();
   @include fluid-typography.fluid-typography();
   @include gap.gap();
   @include gutters.gutters();
